tests/snapshots/codegen_mysql__mysql_as_executor.snap
---
source: tests/codegen_mysql.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql>;
}
impl AsExecutor for sqlx::MySqlPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &*self
    }
}
impl AsExecutor for &sqlx::MySqlPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        *self
    }
}
impl AsExecutor for sqlx::MySqlConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::MySql> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::MySql> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        (**self).as_executor()
    }
}
