tests/snapshots/codegen_mysql__mysql_enum.snap
---
source: tests/codegen_mysql.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql>;
}
impl AsExecutor for sqlx::MySqlPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &*self
    }
}
impl AsExecutor for &sqlx::MySqlPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        *self
    }
}
impl AsExecutor for sqlx::MySqlConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::MySql> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::MySql> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        (**self).as_executor()
    }
}
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash, sqlx::Encode, sqlx::Decode)]
pub enum AuthorsStatus {
    #[sqlx(rename = "active")]
    Active,
    #[sqlx(rename = "banned")]
    Banned,
}
impl sqlx::Type<sqlx::MySql> for AuthorsStatus {
    fn type_info() -> sqlx::mysql::MySqlTypeInfo {
        <str as sqlx::Type<sqlx::MySql>>::type_info()
    }
    fn compatible(ty: &sqlx::mysql::MySqlTypeInfo) -> bool {
        <str as sqlx::Type<sqlx::MySql>>::compatible(ty)
    }
}
pub const GET_STATUS: &str = "SELECT status FROM authors WHERE id = ?";
#[derive(Debug, Clone, sqlx::FromRow)]
pub struct GetStatusRow {
    pub status: AuthorsStatus,
}
pub async fn get_status<E: AsExecutor>(
    mut db: E,
    id: i64,
) -> Result<GetStatusRow, sqlx::Error> {
    sqlx::query_as::<_, GetStatusRow>(GET_STATUS)
        .bind(id)
        .fetch_one(db.as_executor())
        .await
}
