tests/snapshots/codegen_mysql__mysql_slice_param.snap
---
source: tests/codegen_mysql.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql>;
}
impl AsExecutor for sqlx::MySqlPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &*self
    }
}
impl AsExecutor for &sqlx::MySqlPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        *self
    }
}
impl AsExecutor for sqlx::MySqlConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::MySql> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::MySql> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::MySql> {
        (**self).as_executor()
    }
}
#[derive(Debug, Clone)]
pub struct ListAuthorsByIdsParams {
    pub id: Vec<i64>,
    pub name: String,
}
pub const LIST_AUTHORS_BY_IDS: &str = "SELECT id, name FROM authors WHERE id IN (/*SLICE:ids*/?) AND name = ?";
#[derive(Debug, Clone, sqlx::FromRow)]
pub struct ListAuthorsByIdsRow {
    pub id: i64,
    pub name: String,
}
pub async fn list_authors_by_ids<E: AsExecutor>(
    mut db: E,
    arg: ListAuthorsByIdsParams,
) -> Result<Vec<ListAuthorsByIdsRow>, sqlx::Error> {
    let mut sql = LIST_AUTHORS_BY_IDS.to_string();
    {
        let slice_len = (arg.id).len();
        let replacement = if slice_len == 0 {
            "NULL".to_string()
        } else {
            std::iter::repeat_n("?", slice_len).collect::<Vec<_>>().join(", ")
        };
        sql = sql.replace("/*SLICE:ids*/?", &replacement);
    }
    let mut query = sqlx::query_as::<_, ListAuthorsByIdsRow>(sqlx::AssertSqlSafe(sql));
    for value in arg.id {
        query = query.bind(value);
    }
    query = query.bind(arg.name);
    query.fetch_all(db.as_executor()).await
}
